# StudentPassing

./: .gitignore  BasicInfoGUI.pro  CMakeLists.txt  ConfigurationDataItem.cpp  ConfigurationDataItem.h  ConfigurationFileReader.cpp  ConfigurationFileReader.h  DataHandler.cpp  DataHandler.h  DataItem.cpp  DataItem.h  JSONDocs.md  Log.cpp  Log.h  NetworkReader.cpp  NetworkReader.h  NetworkReaderObserver.h  NetworkWriter.cpp  NetworkWriter.h  Networker.cpp  Networker.h  NodeConfiguration.h  Package.cpp  Package.h  PingHandler.cpp  PingHandler.h  ProcessorNode.cpp  ProcessorNode.h  README.md  bidialog.cpp  bidialog.h  bidialog.ui  createXcodeProject.sh  getAllComponents.sh  main.cpp  startall.sh
Archive/: README.md
Archive/BasicInfoNode/: CMakeLists.txt  config.cfg  students.txt
Archive/ExamInfoNode/: CMakeLists.txt  exams.txt
Archive/ExerciseInfoNode/: EImain.cpp  config.cfg
Archive/ProjectInfoNode/: CMakeLists.txt  config.cfg  projects.txt
BIGUI/BasicInfoGUI/: CMakeLists.txt  bidialog.cpp  bidialog.h  bidialog.ui  main.cpp
BaseLayer/: CMakeLists.txt  ConfigurationDataItem.cpp  ConfigurationDataItem.h  ConfigurationFileReader.cpp  DataFileReader.cpp  DataHandler.cpp  DataItem.cpp  DataReaderObserver.h  Log.cpp  Log.h  NetworkReader.cpp  NetworkReaderObserver.h  NetworkWriter.cpp  NetworkWriter.h  Networker.cpp  Networker.h  NodeConfiguration.cpp  NodeConfiguration.h  OHARBaseLayerConfig.cmake  Package.cpp  PingHandler.cpp  PingHandler.h  ProcessorNode.cpp  ProcessorNode.h
BaseLayer/include/OHARBaseLayer/: ConfigurationDataItem.h  ConfigurationFileReader.h  DataHandler.h  DataReaderObserver.h  Log.h  NetworkReader.h  NetworkReaderObserver.h  NetworkWriter.h  Networker.h  NodeConfiguration.h  Package.h  PingHandler.h  ProcessorNode.h  ProcessorNodeObserver.h
BasicInfoGUI/: CMakeLists.txt  bidialog.cpp  bidialog.h  startall.sh
BasicInfoNode/: CMakeLists.txt  SImain.cpp  config.cfg
ExamInfoNode/: CMakeLists.txt  EINmain.cpp  config.cfg  do-cmake-thing.sh
ExerciseInfoNode/: CMakeLists.txt  EImain.cpp  config.cfg  exercises.txt
FilesToInstall/: README.md
FilesToInstall/StudentPassing/: BasicInfoConfig.txt  ExamInfoConfig.txt  ExerciseInfoConfig.txt  ProjectInfoConfig.txt
InstalledFiles/: README.md
InstalledFiles/StudentPassing/: BasicInfoConfig.txt  ExamInfoConfig.txt  ExerciseInfoConfig.txt  ProjectInfoConfig.txt  exercise-info.txt
PipesAndFilters.xcworkspace/: contents.xcworkspacedata
PipesAndFiltersFramework.xcodeproj/: project.pbxproj
PipesAndFiltersFramework.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PipesAndFiltersFramework.xcodeproj/project.xcworkspace/xcuserdata/juustila.xcuserdatad/: UserInterfaceState.xcuserstate
PipesAndFiltersFramework.xcodeproj/xcuserdata/juustila.xcuserdatad/xcschemes/: PipesAndFiltersFramework.xcscheme  xcschememanagement.plist
PipesAndFiltersStudentNode/: PlainStudentFileHandler.cpp  PlainStudentFileHandler.h  StudentFileWriter.cpp  StudentFileWriter.h  StudentWriterHandler.cpp  StudentWriterHandler.h  libboost_system.dylib
PipesAndFiltersStudentNode/ExamInfoNode/: EINmain.cpp  ExamInfoNode.1
PipesAndFiltersStudentNode/ExerciseInfoNode/: EImain.cpp  ExerciseInfoNode.1  NetInputHandler.cpp  NetInputHandler.h  NetOutputHandler.cpp  NetOutputHandler.h  StudentHandler.cpp  StudentHandler.h  StudentNetInputHandler.h  StudentNetOutputHandler.cpp  StudentNetOutputHandler.h
PipesAndFiltersStudentNode/ExerciseWorkInfoNode/: CruelGrader.cpp  CruelGrader.h  EWINmain.cpp  ExerciseWorkInfoNode.1  GraderFactory.cpp  GraderFactory.h  GradingHandler.cpp  GradingHandler.h  TheUsualGrader.cpp  TheUsualGrader.h
PipesAndFiltersStudentNode/PF-Null-Filter/: main.cpp
PipesAndFiltersStudentNode/PipesAndFiltersFramework.xcodeproj/: project.pbxproj
PipesAndFiltersStudentNode/PipesAndFiltersStudentNode/: DataFileReader.cpp  DataFileReader.h  DataReaderObserver.h  PipesAndFiltersFramework.1  SImain.cpp
PipesAndFiltersStudentNode/StudentInfoNode/: GradeCalculator.h  StudentDataItem.cpp  StudentDataItem.h  StudentFileReader.cpp  StudentFileReader.h  StudentInfoNode.1
ProjectInfoNode/: CMakeLists.txt  EWINmain.cpp  config.cfg
StudentLayer/: CMakeLists.txt  CruelGrader.cpp  CruelGrader.h  GradeCalculator.h  GraderFactory.cpp  GraderFactory.h  GradingHandler.cpp  GradingHandler.h  OHARStudentLayerConfig.cmake  PlainStudentFileHandler.cpp  PlainStudentFileHandler.h  StudentDataItem.cpp  StudentDataItem.h  StudentFileReader.cpp  StudentFileReader.h  StudentFileWriter.cpp  StudentFileWriter.h  StudentHandler.cpp  StudentHandler.h  StudentInputHandler.cpp  StudentNetInputHandler.cpp  StudentNetOutputHandler.cpp  StudentNetOutputHandler.h  StudentWriterHandler.cpp  StudentWriterHandler.h  TheUsualGrader.cpp  TheUsualGrader.h  docmake.sh
StudentLayer/include/OHARStudentLayer/: CruelGrader.h  GradeCalculator.h  GradingHandler.h  PlainStudentFileHandler.h  StudentDataItem.h  StudentFileReader.h  StudentFileWriter.h  StudentHandler.h  StudentInputHandler.h  StudentNetInputHandler.h  StudentNetOutputHandler.h  StudentWriterHandler.h  TheUsualGrader.h
TestDataGenerator/: CMakeLists.txt  README.md  main.cpp  speed-test-bash.sh  speed-test.sh
