cmake_minimum_required(VERSION 3.0)
project(OHARBaseLayer)
set(CMAKE_CXX_FLAGS "-fPIC -g -Wall -std=c++11 ${CMAKE_CXX_FLAGS}")
add_library(${PROJECT_NAME} STATIC ConfigurationDataItem.cpp DataItem.cpp Networker.cpp ProcessorNode.cpp ConfigurationFileReader.cpp Log.cpp NodeConfiguration.cpp DataFileReader.cpp NetworkReader.cpp Package.cpp DataHandler.cpp NetworkWriter.cpp PingHandler.cpp ConfigurationDataItem.h DataReaderObserver.h Networker.h ConfigurationFileReader.h Log.h NodeConfiguration.h DataFileReader.h NetworkReader.h Package.h DataHandler.h NetworkReaderObserver.h PingHandler.h DataItem.h NetworkWriter.h ProcessorNode.h)
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "ConfigurationDataItem.h;DataReaderObserver.h;Networker.h;ConfigurationFileReader.h;Log.h;NodeConfiguration.h;DataFileReader.h;NetworkReader.h;Package.h;DataHandler.h;NetworkReaderObserver.h;PingHandler.h;DataItem.h;NetworkWriter.h;ProcessorNode.h")
find_library(BOOSTS boost_system REQUIRED)
target_link_libraries(${PROJECT_NAME} ${BOOSTS})
install(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION lib LIBRARY DESTINATION lib PUBLIC_HEADER DESTINATION include/${PROJECT_NAME})
